apps/editor/src/css/contents.css
.ProseMirror {
  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
    'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
  color: #222;
  font-size: 13px;
  overflow-y: auto;
  overflow-X: hidden;
  height: calc(100% - 36px);
}

.ProseMirror .placeholder {
  color: #999;
}

.ProseMirror:focus {
  outline: none;
}

.ProseMirror-selectednode {
  outline: none;
}

table.ProseMirror-selectednode {
  border-radius: 2px;
  outline: 2px solid #00a9ff;
}

.html-block.ProseMirror-selectednode {
  border-radius: 2px;
  outline: 2px solid #00a9ff;
}

.toastui-editor-contents {
  margin: 0;
  padding: 0;
  font-size: 13px;
  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
    'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
}

.toastui-editor-contents *:not(table) {
  line-height: 160%;
  box-sizing: content-box;
}

.toastui-editor-contents i,
.toastui-editor-contents cite,
.toastui-editor-contents em,
.toastui-editor-contents var,
.toastui-editor-contents address,
.toastui-editor-contents dfn {
  font-style: italic;
}

.toastui-editor-contents strong {
  font-weight: bold;
}

.toastui-editor-contents p {
  margin: 10px 0;
  color: #222;
}

.toastui-editor-contents > h1:first-of-type,
.toastui-editor-contents > div > div:first-of-type h1 {
  margin-top: 14px;
}

.toastui-editor-contents h1,
.toastui-editor-contents h2,
.toastui-editor-contents h3,
.toastui-editor-contents h4,
.toastui-editor-contents h5,
.toastui-editor-contents h6 {
  font-weight: bold;
  color: #222;
}

.toastui-editor-contents h1 {
  font-size: 24px;
  line-height: 28px;
  border-bottom: 3px double #999;
  margin: 52px 0 15px 0;
  padding-bottom: 7px;
}

.toastui-editor-contents h2 {
  font-size: 22px;
  line-height: 23px;
  border-bottom: 1px solid #dbdbdb;
  margin: 20px 0 13px 0;
  padding-bottom: 7px;
}

.toastui-editor-contents h3 {
  font-size: 20px;
  margin: 18px 0 2px;
}

.toastui-editor-contents h4 {
  font-size: 18px;
  margin: 10px 0 2px;
}

.toastui-editor-contents h3,
.toastui-editor-contents h4 {
  line-height: 18px;
}

.toastui-editor-contents h5 {
  font-size: 16px;
}

.toastui-editor-contents h6 {
  font-size: 14px;
}

.toastui-editor-contents h5,
.toastui-editor-contents h6 {
  line-height: 17px;
  margin: 9px 0 -4px;
}

.toastui-editor-contents del {
  color: #999;
}

.toastui-editor-contents blockquote {
  margin: 14px 0;
  border-left: 4px solid #e5e5e5;
  padding: 0 16px;
  color: #999;
}

.toastui-editor-contents blockquote p,
.toastui-editor-contents blockquote ul,
.toastui-editor-contents blockquote ol {
  color: #999;
}

.toastui-editor-contents blockquote > :first-child {
  margin-top: 0;
}

.toastui-editor-contents blockquote > :last-child {
  margin-bottom: 0;
}

.toastui-editor-contents pre,
.toastui-editor-contents code {
  font-family: Consolas, Courier, 'Apple SD 산돌고딕 Neo', -apple-system, 'Lucida Grande',
    'Apple SD Gothic Neo', '맑은 고딕', 'Malgun Gothic', 'Segoe UI', '돋움', dotum, sans-serif;
  border: 0;
  border-radius: 0;
}

.toastui-editor-contents pre {
  margin: 2px 0 8px;
  padding: 18px;
  background-color: #f4f7f8;
}

.toastui-editor-contents code {
  color: #c1798b;
  background-color: #f9f2f4;
  padding: 2px 3px;
  letter-spacing: -0.3px;
  border-radius: 2px;
}

.toastui-editor-contents pre code {
  padding: 0;
  color: inherit;
  white-space: pre-wrap;
  background-color: transparent;
}

.toastui-editor-contents img {
  margin: 4px 0 10px;
  box-sizing: border-box;
  vertical-align: top;
  max-width: 100%;
}

.toastui-editor-contents table {
  border: 1px solid rgba(0, 0, 0, 0.1);
  margin: 12px 0 14px;
  color: #222;
  width: auto;
  border-collapse: collapse;
  box-sizing: border-box;
}

.toastui-editor-contents table th,
.toastui-editor-contents table td {
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 5px 14px 5px 12px;
  height: 32px;
}

.toastui-editor-contents table th {
  background-color: #555;
  font-weight: 300;
  color: #fff;
  padding-top: 6px;
}

.toastui-editor-contents th p {
  margin: 0;
  color: #fff;
}

.toastui-editor-contents td p {
  margin: 0;
  padding: 0 2px;
}

.toastui-editor-contents td.toastui-editor-cell-selected {
  background-color: #d8dfec;
}

.toastui-editor-contents th.toastui-editor-cell-selected {
  background-color: #908f8f;
}

.toastui-editor-contents ul,
.toastui-editor-contents menu,
.toastui-editor-contents ol,
.toastui-editor-contents dir {
  display: block;
  list-style-type: none;
  padding-left: 24px;
  margin: 6px 0 10px;
  color: #222;
}

.toastui-editor-contents ol {
  list-style-type: none;
  counter-reset: li;
}

.toastui-editor-contents ol > li {
  counter-increment: li;
}

.toastui-editor-contents ul > li::before,
.toastui-editor-contents ol > li::before {
  display: inline-block;
  position: absolute;
}

.toastui-editor-contents ul > li::before {
  content: '';
  margin-top: 6px;
  margin-left: -17px;
  width: 5px;
  height: 5px;
  border-radius: 50%;
  background-color: #ccc;
}

.toastui-editor-contents ol > li::before {
  content: '.' counter(li);
  margin-left: -28px;
  width: 24px;
  text-align: right;
  direction: rtl;
  color: #aaa;
}

.toastui-editor-contents ul ul,
.toastui-editor-contents ul ol,
.toastui-editor-contents ol ol,
.toastui-editor-contents ol ul {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.toastui-editor-contents ul li,
.toastui-editor-contents ol li {
  position: relative;
}

.toastui-editor-contents ul p,
.toastui-editor-contents ol p {
  margin: 0;
}

.toastui-editor-contents hr {
  border-top: 1px solid #eee;
  margin: 16px 0;
}

.toastui-editor-contents a {
  text-decoration: underline;
  color: #4b96e6;
}

.toastui-editor-contents a:hover {
  color: #1f70de;
}

.toastui-editor-contents .image-link {
  position: relative;
}
/* ... */

